# geminicli2api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
src/: anthropic_routes.py  anthropic_transformers.py  auth.py  cli.py  config.py  gemini_routes.py  google_api_client.py  http_client.py  http_retry.py  main.py  models.py  openai_routes.py  openai_transformers.py  utils.py
src/models/: __init__.py  gemini.py  helpers.py
src/routes/: __init__.py  anthropic.py  gemini.py  openai.py  responses.py  transformers.py
src/routes/transformers/: __init__.py  anthropic.py  openai.py  responses.py
src/schemas/: __init__.py  anthropic.py  openai.py  responses.py
src/services/: __init__.py  auth.py  gemini_client.py
tests/: __init__.py  test_auth.py  test_cli.py  test_function_calling.py  test_multi_credential.py
